# calfenster

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.h.in
.github/workflows/: ci.yml  package.yml  release.yml
debian/: changelog  control  copyright
debian/upstream/: metadata
include/calfenster/: app_server.h  clock_nanny.h  configuration.h  event_filter.h
scripts/: release.py
src/: app_server.cpp  clock_nanny.cpp  configuration.cpp  event_filter.cpp  main.cpp
